--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
                 <div class="menu">
                         <div class="logo-header">
-                            <img src="midia/logo.png" alt="">
+                            <img src="midia/logos/logo.png" alt="">
                         </div>
                         <nav class="menu-content">
                             <ul>
@@ -23,7 +23,7 @@
                         </nav>
                 </div>
                 <div class="image-header">
-                    <img src="midia/ilah5.png" alt="">
+                    <img src="midia/particip/ilha.png" alt="">
                     <span class="text-image">LENDAS POR UM MOTIVO
                         <div class="second-text-image">Descobrir Mais</div>
                         <span><ion-icon name="chevron-down-outline"></ion-icon></span>
@@ -34,25 +34,26 @@
                 <h1>SOBRE NÓS</h1>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Ilha das Lendas é um grupo e programa de streaming brasileiro, fundado por Baiano . Eles cobrem a maioria das principais regiões competitivas, incluindo LPL, LCK, LEC, LCS e CBLOL em suas transmissões ao vivo com os hosts de streaming. Todas as segundas-feiras, às 16h30 CET, acontece uma reconstituição do "Depois do Crime" do Baiano com Mylon e uma das "lendas" da Ilha para conversar com jogadores selecionados do CBLOL. Também apresentam programas semanais com personalidades fixas, como "Gayssip da Semana" com Minerva , programa sobre fofocas e notícias do cenário competitivo, e "GOAT ou Bagre" com Ranger , programa que analisa e analisa jogadas de jogadores do CBLOL e determina se são "bagres" ou "GOATs".</p>
+                        <p>Ilha das Lendas é um grupo e programa de streaming brasileiro, fundado por Baiano . Eles cobrem a maioria das principais regiões competitivas, incluindo LPL, LCK, LEC, LCS e CBLOL em suas transmissões ao vivo com os hosts de streaming.</p>
+                        <p>Todas as segundas-feiras, às 16h30 CET, acontece uma reconstituição do "Depois do Crime" do Baiano com Mylon e uma das "lendas" da Ilha para conversar com jogadores selecionados do CBLOL. Também apresentam programas semanais com personalidades fixas, como "Gayssip da Semana" com Minerva , programa sobre fofocas e notícias do cenário competitivo, e "GOAT ou Bagre" com Ranger , programa que analisa e analisa jogadas de jogadores do CBLOL e determina se são "bagres" ou "GOATs".</p>
                     </div>
                     <div class="about-image">
-                        <img src="midia/ilha-todos.png" alt="foto de todos integrantes juntos">
-                        <img src="midia/ilustra-ilha.png" alt="arte dos integrantes">
+                        <img src="midia/particip/ilha-todos.png" alt="foto de todos integrantes juntos">
+                        <img src="midia/particip/ilustra-ilha.png" alt="arte dos integrantes">
                     </div>
                 </div>
             </section>
             <section class="particip">
-                <div class="particip-foto  a">
+                <div class="particip-foto ">
                     <h2>Participantes</h2>
-                    <img src="midia/sup-logo.png" alt="">
+                    <img src="midia/logos/sup-logo.png" alt="">
                     <div class="bola">
-                        <img src="midia/baiano.png" alt="">
+                        <img src="midia/particip/baiano.png" alt="">
                     </div>
                     <div class="redes">
-                        <a href=""><img src="midia/redes/insta-logo.png" alt=""></a>
-                        <a href=""><img src="midia/redes/twitch-logo.png" alt=""></a>
-                        <a href=""><img src="midia/redes/x-logo.png" alt=""></a>
+                        <a href=""><img src="midia/logos/insta-logo.png" alt=""></a>
+                        <a href=""><img src="midia/logos/twitch-logo.png" alt=""></a>
+                        <a href=""><img src="midia/logos/x-logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="sobre-particip a">
@@ -64,17 +65,20 @@
                             <p>TIMES NA CARREIRA</p>
                         </div>
                         <div class="image-times">
-                            <img src="midia/times/cnb-logo.png" alt="">
-                            <img src="midia/times/intz-logo.png" alt="">
-                            <img src="midia/times/keyd-logo.png" alt="">
-                            <img src="midia/times/pngwing.com (1).png" alt="">
-                            <img src="midia/times/timesport.png" alt="">
+                            <img src="midia/times/frequency.png" alt="">
+                            <img src="midia/times/pwn3ed.png" alt="">
+                            <img src="midia/times/hitbox.png" alt="">
+                            <img src="midia/times/jayob.png" alt="">
+                            <img src="midia/times/keyd_stars.png" alt="">
+                            <img src="midia/times/big_gods_jackals.png" alt="">
+                            <img src="midia/times/cnb.png" alt="">
+                            <img src="midia/times/santos.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="escolhas">
-                    <button></button>
-                    <button></button>
+                    <button id="botaoBaiano"></button>
+                    <button id="botaoEsa"></button>
                     <button></button>
                     <button></button>
                     <button></button>
@@ -84,6 +88,36 @@
                     <button></button>
                 </div>
             </section>
+            <section class="quatro">
+                <div class="titulo">
+                    <h2>Programação</h2>
+                </div>
+                <div class="prog">
+                    <div class="thumb">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/cUavqLBVvvM?si=0yCRh9-PW8qTkyF9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <span>Depois do Crime</span>
+                        <button class="goYou">Playlist Completa</button>
+                        <p>Depois do crime  é um programa lidero por Mylon e mais uma lenda, onde dois convidados do CBLOL comentam sobres os crimes cometidos no fim de semana de CBLOL</p>
+                    </div>
+                    <div class="princip-prog">
+                        <div class="calendario">
+                            <div class="carrossel-dias">
+                                <button id="anterior" class="cal" size="large"><ion-icon name="chevron-back-outline"></ion-icon></button>
+                                <div class="dia">Segunda</div>
+                                <button id="proximo" class="cal" size="large"><ion-icon name="chevron-forward-outline"></ion-icon></button>
+                            </div>
+                            <hr>
+                            <div id="programas">
+                                <ul>
+                                    <li>Depois do Crime - 12:30</li>
+                                    <li>CBLOL Academy - 16:00</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         
     </main>
     
